--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "@radix-ui/react-primitive": "^2.0.0",
     "@radix-ui/themes": "^3.1.3",
     "autoprefixer": "^10.4.20",
+    "bitcoinjs-lib": "^6.1.6",
+    "date-fns": "^3.6.0",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "react-responsive-modal": "^6.4.2",
+    "react-tooltip": "^5.28.0",
     "typescript-eslint": "^8.2.0"
   },
   "devDependencies": {
