--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-primitive": "^2.0.0",
     "@radix-ui/themes": "^3.1.3",
+    "@tanstack/react-query": "^5.28.14",
+    "axios": "^1.6.8",
     "autoprefixer": "^10.4.20",
     "bitcoinjs-lib": "^6.1.6",
     "date-fns": "^3.6.0",
+    "decimal.js-light": "^2.5.1",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
@@ -24,7 +27,9 @@
     "react-icons": "^5.3.0",
     "react-responsive-modal": "^6.4.2",
     "react-tooltip": "^5.28.0",
-    "typescript-eslint": "^8.2.0"
+    "typescript-eslint": "^8.2.0",
+    "url-safe-base64": "^1.3.0",
+    "usehooks-ts": "^3.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
