--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-tooltip": "^5.28.0",
     "typescript-eslint": "^8.2.0",
     "url-safe-base64": "^1.3.0",
-    "usehooks-ts": "^3.0.2"
+    "usehooks-ts": "^3.0.2",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
