--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-primitive": "^2.0.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/themes": "^3.1.3",
     "@tanstack/react-query": "^5.28.14",
-    "axios": "^1.6.8",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.6.8",
     "bitcoinjs-lib": "^6.1.6",
     "date-fns": "^3.6.0",
     "decimal.js-light": "^2.5.1",
