--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-primitive": "^2.0.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
@@ -30,7 +29,8 @@
     "react-tooltip": "^5.28.0",
     "typescript-eslint": "^8.2.0",
     "url-safe-base64": "^1.3.0",
-    "usehooks-ts": "^3.0.2"
+    "usehooks-ts": "^3.0.2",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
