--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "yieldi-ui",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,36 +16,36 @@
     "@radix-ui/react-primitive": "^2.0.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/themes": "^3.1.3",
-    "@tanstack/react-query": "^5.28.14",
+    "@tanstack/react-query": "^5.52.1",
     "autoprefixer": "^10.4.20",
-    "axios": "^1.6.8",
+    "axios": "^1.7.4",
     "bitcoinjs-lib": "^6.1.6",
     "date-fns": "^3.6.0",
     "decimal.js-light": "^2.5.1",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-responsive-modal": "^6.4.2",
     "react-tooltip": "^5.28.0",
+    "tailwind-merge": "^2.5.2",
     "typescript-eslint": "^8.2.0",
     "url-safe-base64": "^1.3.0",
-    "usehooks-ts": "^3.0.2",
-    "tailwind-merge": "^2.5.2"
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@types/node": "^20.16.1",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5"
+    "typescript": "^5.5.4"
   }
 }
