--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.6.8",
     "bitcoinjs-lib": "^6.1.6",
+    "btc-staking-ts": "^0.2.10",
     "date-fns": "^3.6.0",
     "decimal.js-light": "^2.5.1",
     "eslint-plugin-tailwindcss": "^3.17.4",
@@ -25,12 +26,13 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-responsive-modal": "^6.4.2",
     "react-tooltip": "^5.28.0",
+    "tailwind-merge": "^2.5.2",
     "typescript-eslint": "^8.2.0",
     "url-safe-base64": "^1.3.0",
-    "usehooks-ts": "^3.0.2",
-    "tailwind-merge": "^2.5.2"
+    "usehooks-ts": "^3.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
