--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.4",
     "bitcoinjs-lib": "^6.1.6",
+    "btc-staking-ts": "^0.2.10",
     "date-fns": "^3.6.0",
     "decimal.js-light": "^2.5.1",
     "eslint-plugin-tailwindcss": "^3.17.4",
@@ -34,6 +35,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-responsive-modal": "^6.4.2",
     "react-tooltip": "^5.28.0",
     "tailwind-merge": "^2.5.2",
