feat: update styling and gh actions
Trying to go for more monochrome

- Adds npm lint fix commands
- Add gh action to run lint
- Redirect root to /stake/btc
- Updates layout and navbar such that pages are nested within the
  navbar. This allows for a more consistent layout with no page
  scrolling.
- Updates connect wallet styling
- Make navbar smaller in height
- Make table cells larger

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,26 +8,14 @@
     "prettier",
     "plugin:tailwindcss/recommended"
   ],
-  "plugins": [
-    "import",
-    "react",
-    "@typescript-eslint",
-    "react-hooks"
-  ],
+  "plugins": ["import", "react", "@typescript-eslint", "react-hooks"],
   "settings": {
     "react": {
       "version": "detect"
     },
     "tailwindcss": {
-      "callees": [
-        "cnMerge",
-        "cn",
-        "cva",
-        "tw"
-      ],
-      "tags": [
-        "tw"
-      ]
+      "callees": ["cnMerge", "cn", "cva", "tw"],
+      "tags": ["tw"]
     }
   },
   "rules": {
