--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint:next:fix": "npm run lint:next -- --fix"
   },
   "dependencies": {
+    "@bitcoin-js/tiny-secp256k1-asmjs": "^2.2.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-primitive": "^2.0.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
