--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/themes": "^3.1.3",
     "@tanstack/react-query": "^5.52.1",
+    "@types/lodash": "^4.17.7",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.4",
     "bitcoinjs-lib": "^6.1.6",
@@ -32,6 +33,7 @@
     "date-fns": "^3.6.0",
     "decimal.js-light": "^2.5.1",
     "eslint-plugin-tailwindcss": "^3.17.4",
+    "lodash": "^4.17.21",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
