--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ NEXT_PUBLIC_MEMPOOL_API=https://babylon.mempool.space
 NEXT_PUBLIC_API_URL=https://staking-api.staging.babylonchain.io
 NEXT_PUBLIC_NETWORK=signet
 NEXT_PUBLIC_DISPLAY_TESTING_MESSAGES=true
+NEXT_PUBLIC_ASSETS=["BTC"]
