--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^3.6.0",
     "decimal.js-light": "^2.5.1",
     "eslint-plugin-tailwindcss": "^3.17.4",
+    "ethers": "^6.13.2",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -44,7 +45,9 @@
     "tailwind-merge": "^2.5.2",
     "typescript-eslint": "^8.2.0",
     "url-safe-base64": "^1.3.0",
-    "usehooks-ts": "^3.1.0"
+    "usehooks-ts": "^3.1.0",
+    "viem": "2.x",
+    "wagmi": "^2.12.16"
   },
   "devDependencies": {
     "@types/node": "^20.16.1",
