--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-primitive": "^2.0.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/themes": "^3.1.3",
+    "@swapkit/sdk": "^1.2.19",
     "@tanstack/react-query": "^5.52.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.4",
