--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-primitive": "^2.0.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/themes": "^3.1.3",
+    "@rainbow-me/rainbowkit": "^2.1.7",
     "@tanstack/react-query": "^5.52.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.4",
@@ -44,7 +45,9 @@
     "tailwind-merge": "^2.5.2",
     "typescript-eslint": "^8.2.0",
     "url-safe-base64": "^1.3.0",
-    "usehooks-ts": "^3.1.0"
+    "usehooks-ts": "^3.1.0",
+    "viem": "2.x",
+    "wagmi": "^2.12.16"
   },
   "devDependencies": {
     "@types/node": "^20.16.1",
