eth wallet working in main app

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ NEXT_PUBLIC_API_URL=https://staking-api.staging.babylonchain.io
 NEXT_PUBLIC_NETWORK=signet
 NEXT_PUBLIC_DISPLAY_TESTING_MESSAGES=true
 NEXT_PUBLIC_ASSETS=["BTC"]
+NEXT_PUBLIC_WALLETCONNECT_PROJECTID="27c0bf211981210772e092335b738a21"
