--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ethers": "^6.13.2",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
+    "pino": "7.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
